--- a/src/website/templates/website/contact_us.html
+++ b/src/website/templates/website/contact_us.html
@@ -21,7 +21,10 @@
                         </div>
                         <div class="col-lg-6">
                             <p class="contact_top_desc aos-init aos-animate" data-aos="fade-left"
-                               data-aos-duration="2000">Welcome to Rajasthan Dryfruit House, where tradition meets taste in every bite. With over 50 years of expertise in the industry, we have been committed to bringing you the finest quality dry fruits and mouth fresheners that tantalize your taste buds and elevate your snacking experience...</p>
+                               data-aos-duration="2000">Welcome to Rajasthan Dryfruit House, where tradition meets taste
+                                in every bite. With over 50 years of expertise in the industry, we have been committed
+                                to bringing you the finest quality dry fruits and mouth fresheners that tantalize your
+                                taste buds and elevate your snacking experience...</p>
                             <a href="{% url 'website:about_us' %}">
                                 <button type="button"
                                         class="btn custom_btn load_more_1 rounded-pill px-3 px-sm-4 py-3 text-white text-uppercase">
@@ -577,9 +580,9 @@
                                 <i class="far fa-circle"></i>
                                 <i class="far fa-circle"></i>
                             </div>
-                            <h4 class="address_title">About Organi</h4>
-                            <p class="address_desc">We are a strong community of 100,000+ customers and 600+
-                                sellers who aspire to be good</p>
+                            <h4 class="address_title">About Rajasthan</h4>
+                            <p class="address_desc">We are a strong community of 100,000+ customers who aspire to be
+                                good</p>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4 text-center">
@@ -598,7 +601,8 @@
                                 <i class="far fa-circle"></i>
                             </div>
                             <h4 class="address_title">Our Address</h4>
-                            <p class="address_desc">855 Road Broklyn Street, 600 New York, USA</p>
+                            <p class="address_desc">SHop No 8, Campus Corner 2 Complex Beside sales india AUDA Garden,
+                                nr.Flamingo circle Prahlad Nagar Ahmedabad Gujarat 380015
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4 text-center">
@@ -620,7 +624,12 @@
                                 <i class="far fa-circle"></i>
                             </div>
                             <h4 class="address_title">Phone &amp; Email</h4>
-                            <p class="address_desc">222 555 999 needhelp@organi.com</p>
+                            <p class="address_desc">
+                               +91 81410 66633   support@rajasthandryfruitshouse.com
+
+
+
+                            </p>
                         </div>
                     </div>
                 </div>
