--- a/src/website/templates/website/home.html
+++ b/src/website/templates/website/home.html
@@ -37,9 +37,10 @@
                                  alt="image_not_found">
                         </div>
                         <div class="banner_title2">
-                            <h1 class="text-white">Discover the Finest Dry Fruits - Handpicked for Unmatched Freshness and Flavor!<font class="text-effect">
-                                <span>H</span><span>e</span><span>a</span><span>l</span><span>t</span><span>h</span><span>y</span>
-                            </font>
+                            <h1 class="text-white">Discover the Finest Dry Fruits - Handpicked for Unmatched Freshness
+                                and Flavor!<font class="text-effect">
+                                    <span>H</span><span>e</span><span>a</span><span>l</span><span>t</span><span>h</span><span>y</span>
+                                </font>
                             </h1>
                         </div>
 
@@ -140,7 +141,7 @@
                             <i class="far fa-circle"></i>
                             <span class="ps-2">NATURE'S BEST SELECTION</span>
                         </div>
-                        <h2 class="product_sec_title pb-3">Our Organic Products</h2>
+                        <h2 class="product_sec_title pb-3">Our Popular Products</h2>
                     </div>
                 </div>
                 <div class="col-lg-8">
@@ -288,7 +289,7 @@
                                                        target="_blank">{{ product.title }}</a>
                                                 </h3>
                                                 <div class="product_price">
-                                                     <span class="sale_price pe-1">{{ product.get_price }}</span>
+                                                    <span class="sale_price pe-1">{{ product.get_price }}</span>
                                                     {% if product.discount %}
                                                         <del>{{ product.price }}</del>
                                                     {% endif %}
@@ -354,7 +355,7 @@
                                                        target="_blank">{{ product.title }}</a>
                                                 </h3>
                                                 <div class="product_price">
-                                                       <span class="sale_price pe-1">{{ product.get_price }}</span>
+                                                    <span class="sale_price pe-1">{{ product.get_price }}</span>
                                                     {% if product.discount %}
                                                         <del>{{ product.price }}</del>
                                                     {% endif %}
@@ -420,7 +421,7 @@
                                                        target="_blank">{{ product.title }}</a>
                                                 </h3>
                                                 <div class="product_price">
-                                                     <span class="sale_price pe-1">{{ product.get_price }}</span>
+                                                    <span class="sale_price pe-1">{{ product.get_price }}</span>
                                                     {% if product.discount %}
                                                         <del>{{ product.price }}</del>
                                                     {% endif %}
@@ -486,7 +487,7 @@
                                                        target="_blank">{{ product.title }}</a>
                                                 </h3>
                                                 <div class="product_price">
-                                                       <span class="sale_price pe-1">{{ product.get_price }}</span>
+                                                    <span class="sale_price pe-1">{{ product.get_price }}</span>
                                                     {% if product.discount %}
                                                         <del>{{ product.price }}</del>
                                                     {% endif %}
@@ -552,7 +553,7 @@
                                                        target="_blank">{{ product.title }}</a>
                                                 </h3>
                                                 <div class="product_price">
-                                                       <span class="sale_price pe-1">{{ product.get_price }}</span>
+                                                    <span class="sale_price pe-1">{{ product.get_price }}</span>
                                                     {% if product.discount %}
                                                         <del>{{ product.price }}</del>
                                                     {% endif %}
@@ -658,7 +659,7 @@
                             <i class="far fa-circle"></i>
                             <span class="ps-2">NATURE'S BEST SELECTION</span>
                         </div>
-                        <h2 class="product_sec_title pb-3">Popular Organic Discount</h2>
+                        <h2 class="product_sec_title pb-3">Popular Discounted Products</h2>
                     </div>
                 </div>
 
@@ -715,10 +716,10 @@
                                            target="_blank">{{ product.title }}</a>
                                     </h3>
                                     <div class="product_price">
-                                           <span class="sale_price pe-1">{{ product.get_price }}</span>
-                                                    {% if product.discount %}
-                                                        <del>{{ product.price }}</del>
-                                                    {% endif %}
+                                        <span class="sale_price pe-1">{{ product.get_price }}</span>
+                                        {% if product.discount %}
+                                            <del>{{ product.price }}</del>
+                                        {% endif %}
                                     </div>
                                 </div>
                             </div>
@@ -799,10 +800,10 @@
                                            target="_blank">{{ product.title }}</a>
                                     </h3>
                                     <div class="product_price">
-                                         <span class="sale_price pe-1">{{ product.get_price }}</span>
-                                                    {% if product.discount %}
-                                                        <del>{{ product.price }}</del>
-                                                    {% endif %}
+                                        <span class="sale_price pe-1">{{ product.get_price }}</span>
+                                        {% if product.discount %}
+                                            <del>{{ product.price }}</del>
+                                        {% endif %}
                                     </div>
                                 </div>
                             </div>
@@ -884,6 +885,7 @@
                         <div class="offer_delivery_title">
                             <span><font>NATURE'S BEST SELECTION -></font> FRESH FROM RDH</span>
                         </div>
+
                         <div class="offer_delivery_btn">
                             <a href="{% url 'website:shop' %}" class="custom_btn rounded-pill">
                                 <button type="button" class="btn text-white">Shop Now <span><i
@@ -891,6 +893,13 @@
                             </a>
                         </div>
                     </div>
+                    <h5 class="mt-3">
+                        Join the Healthy Snacking Revolution!</h5>
+                    <p class="mt-4">🥜 Premium Dry Fruits - Your Path to Wellness 🥜</p>
+                    <p>🔸 Sourced from the Finest Orchards</p>
+                    <p>🔸 Sustainable and Eco-Friendly</p>
+                    <p>🔸 Delightfully Nutritious</p>
+                    </h5>
                 </div>
 
             </div>
