--- a/templates/website/include/footer.html
+++ b/templates/website/include/footer.html
@@ -82,7 +82,8 @@
                                  </h4>
                               </div>
                               <div class="footer_inner_ctc_info pt-2 text-white">
-                                 <p>Address: <font>123 Nut Lane, Orchard City, CA 90210</font>
+                                 <p>Address: <font>SHop No 8, Campus Corner 2 Complex Beside sales india AUDA Garden,
+                                nr.Flamingo circle Prahlad Nagar Ahmedabad Gujarat 380015</font>
                                  </p>
                                  <p>Email: <font>support@rajasthandryfruitshouse.com</font>
                                  </p>
