--- a/src/website/templates/website/about.html
+++ b/src/website/templates/website/about.html
@@ -1,7 +1,7 @@
 {% extends  'website/base.html' %}
 {% load static %}
 {% block content %}
-    <section class="vendor_section sec_space_small aos-init aos-animate" data-aos="fade-up" data-aos-duration="2000">
+    <section class="vendor_section sec_space_small">
         <div class="container">
             <div class="vendor_image">
                 <img src="{% static 'website/images/backgrounds/about.png' %}" alt="image_not_found">
@@ -14,30 +14,31 @@
                 Welcome to Rajasthan Dryfruit House, where tradition meets taste in every bite. With over 50 years of
                 expertise in the industry, we have been committed to bringing you the finest quality dry fruits and
                 mouth fresheners that tantalize your taste buds and elevate your snacking experience.</p>
-                <p>
+            <p>
                 Since our inception, we have remained dedicated to sourcing only the highest quality ingredients,
                 ensuring that each product delivers exceptional flavor and freshness with every bite. Our journey began
                 with a passion for delivering premium quality snacks to our customers, and over the decades, that
-                    dedication has only strengthened.</p>
+                dedication has only strengthened.</p>
 
-                <p>At Rajasthan Dryfruit House, we understand the importance of maintaining the rich traditions of our
+            <p>At Rajasthan Dryfruit House, we understand the importance of maintaining the rich traditions of our
                 craft while also embracing innovation to meet the evolving tastes of our customers. Every product that
-                    bears our name is a testament to our unwavering commitment to excellence and customer satisfaction.</p>
+                bears our name is a testament to our unwavering commitment to excellence and customer satisfaction.</p>
 
-                <p>From the finest almonds to the most aromatic spices, each ingredient is carefully selected and expertly
+            <p>From the finest almonds to the most aromatic spices, each ingredient is carefully selected and expertly
                 blended to create a symphony of flavors that will leave you craving more. Whether you're indulging in
                 our decadent dry fruits or refreshing your palate with our mouth fresheners, you can trust that you're
-                    experiencing the best that nature has to offer.</p>
+                experiencing the best that nature has to offer.</p>
 
-                <p>As a family-owned business, we take pride in our heritage and the relationships we've built with our
+            <p>As a family-owned business, we take pride in our heritage and the relationships we've built with our
                 customers over the years. When you choose Rajasthan Dryfruit House, you're not just purchasing
-                    snacks—you're joining a community of discerning individuals who share a passion for quality and flavor.</p>
-<p>
+                snacks—you're joining a community of discerning individuals who share a passion for quality and
+                flavor.</p>
+            <p>
                 Thank you for choosing Rajasthan Dryfruit House. We look forward to serving you for generations to come.
             </p>
             <div class="row">
                 <div class="col col-lg-3 col-md-6 col-sm-6">
-                    <div class="vendor_service_item aos-init aos-animate" data-aos="fade-up" data-aos-duration="500">
+                    <div class="vendor_service_item ">
                         <div class="item_icon"
                              style="background-image: url('{% static 'website/images/services/service18.png' %}');">
                             <img src="{% static 'website/images/services/service19.png' %}" alt="image_not_found">
@@ -53,7 +54,7 @@
                 </div>
 
                 <div class="col col-lg-3 col-md-6 col-sm-6">
-                    <div class="vendor_service_item aos-init aos-animate" data-aos="fade-up" data-aos-duration="1000">
+                    <div class="vendor_service_item aos-init">
                         <div class="item_icon"
                              style="background-image: url('{% static 'website/images/services/service18.png' %}');">
                             <img src="{% static 'website/images/services/service20.png' %}" alt="image_not_found">
@@ -69,7 +70,7 @@
                 </div>
 
                 <div class="col col-lg-3 col-md-6 col-sm-6">
-                    <div class="vendor_service_item aos-init aos-animate" data-aos="fade-up" data-aos-duration="1500">
+                    <div class="vendor_service_item aos-init">
                         <div class="item_icon"
                              style="background-image: url('{% static 'website/images/services/service18.png' %}');">
                             <img src="{% static 'website/images/services/service21.png' %}" alt="image_not_found">
@@ -85,7 +86,7 @@
                 </div>
 
                 <div class="col col-lg-3 col-md-6 col-sm-6">
-                    <div class="vendor_service_item aos-init aos-animate" data-aos="fade-up" data-aos-duration="2000">
+                    <div class="vendor_service_item aos-init">
                         <div class="item_icon"
                              style="background-image: url('{% static 'website/images/services/service18.png' %}');">
                             <img src="{% static 'website/images/services/service22.png' %}" alt="image_not_found">
@@ -102,6 +103,23 @@
             </div>
         </div>
     </section>
+    <section class="vendor_section mt-0 sec_space_small ">
+        <div class="container">
+            <h5>1. Premium Quality</h5>
+            <p>"Experience top-quality, fresh dry fruits sourced from the best farms, ensuring nutritious and delicious
+                snacks for all occasions."</p>
+            <h5>2. Health Benefits</h5>
+            <p>"Boost your energy, heart health, and immunity with our dry fruits, rich in essential vitamins,
+                minerals, and antioxidants."</p>
+            <h5>3. Variety and Flavors</h5>
+            <p>"Explore our diverse range of almonds, cashews, walnuts, pistachios, and more, available in raw,
+                roasted, salted, and flavored options."</p>
+            <h5>4. Perfect for On-the-Go</h5>
+            <p>"Enjoy our dry fruits in convenient, resealable packs that are perfect for snacking on-the-go, whether
+                at work, school, or during travel."</p>
+        </div>
+    </section>
+
     <div class="team_inner_content mb-4">
         <div class="container">
             <h2 class="title_text text-center">
@@ -114,14 +132,15 @@
                         {% if team %}
                             {% for object in team %}
                                 <div class="col-sm-6 col-md-6 col-xl-3">
-                                    <div class="card team_content text-center aos-init aos-animate" data-aos="fade-left"
-                                         data-aos-duration="2000">
+                                    <div class="card team_content text-center ">
                                         <img class="rounded-pill" src="{{ object.image.url }}" alt="team3">
                                         <div class="card-body team_author_content">
                                             <h4 class="card-text team_author_post mb-2">{{ object.name }}</h4>
-                                            <h3 class="card-text team_author_post mb-2 text-warning">{{ object.rank }}</h3>
+                                            <h5 class="card-text team_author_post mb-2 text-warning">{{ object.rank }}</h5>
                                             <div class="team_author_social_link d-flex justify-content-center justify-content-around align-items-center">
                                                 <a class="text-warning social_twitt" href="
+
+
 
 
 
@@ -132,10 +151,14 @@
 
 
 
+
+
                                                         {% if object.facebook_link %}{{ object.twitter_link }}{% else %}javascript:void(0){% endif %}">
                                                     <i class="fab fa-facebook-square"></i>
                                                 </a>
                                                 <a class="text-warning social_twitt" href="
+
+
 
 
 
@@ -146,10 +169,14 @@
 
 
 
+
+
                                                         {% if object.instagram_link %}{{ object.twitter_link }}{% else %}javascript:void(0){% endif %}">
                                                     <i class="fab fa-instagram"></i>
                                                 </a>
                                                 <a class="text-warning social_twitt" href="
+
+
 
 
 
@@ -169,56 +196,23 @@
             </div>
         </div>
     </div>
-<section class="work_process_section sec_space_small pb-0"
-         style="background-image: url('{% static 'website/images/backgrounds/bg10.png' %}')">
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col col-lg-5">
-                <div class="section_title text-center">
-                    <h2 class="title_text mb-0">
-                        Our Simple Process
-                    </h2>
-                </div>
-            </div>
+    <section class="vendor_section sec_space_small">
+        <div class="container">
+
+            <h5 class="title_text">
+               Why Choose Our Premium Dry Fruits?
+            </h5>
+            <ul class="mt-3">
+                <li class="mt-2">
+                    <b>Exceptional Quality and Freshness</b> "Indulge in the finest dry fruits, meticulously sourced for unmatched quality and guaranteed freshness in every bite."
+                </li>
+                <li class="mt-2">
+                    <b>Nutrient-Rich and Healthy </b>"Benefit from a natural source of essential vitamins, minerals, and antioxidants, promoting energy, heart health, and overall well-being."
+                </li>
+                <li class="mt-2">
+                    <b>Wide Selection for Every Taste </b>"Explore a diverse range of flavours and varieties, including almonds, cashews, walnuts, and pistachios, perfect for every palate and occasion."
+                </li>
+            </ul>
         </div>
-        <div class="row">
-            <div class="col col-lg-4">
-                <div class="work_process_item"
-                     style="background-image: url('{% static 'website/images/vendor/vendor_bg_1.png' %}');">
-                    <div class="item_icon">1</div>
-                    <h3 class="item_title">
-                        Select Your Favorite Products
-                    </h3>
-                    <p class="mb-0">
-                        Browse our extensive collection of premium quality dry fruits.
-                    </p>
-                </div>
-            </div>
-            <div class="col col-lg-4">
-                <div class="work_process_item"
-                     style="background-image: url('{% static 'website/images/vendor/vendor_bg_2.png' %}');">
-                    <div class="item_icon">2</div>
-                    <h3 class="item_title">
-                        Place Your Order
-                    </h3>
-                    <p class="mb-0">
-                        Easily add products to your cart and proceed to checkout with our simple and secure process.
-                    </p>
-                </div>
-            </div>
-            <div class="col col-lg-4">
-                <div class="work_process_item"
-                     style="background-image: url('{% static 'website/images/vendor/vendor_bg_3.png' %}');">
-                    <div class="item_icon">3</div>
-                    <h3 class="item_title">
-                        Enjoy Swift Delivery
-                    </h3>
-                    <p class="mb-0">
-                        Receive your order promptly with our reliable and fast delivery service.
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
+    </section>
 {% endblock content %}
