--- a/templates/website/include/header.html
+++ b/templates/website/include/header.html
@@ -7,11 +7,12 @@
                 <div class="header_top_content d-flex pt-2">
                     <div class="mail_text_content d-flex">
                         <p class="mail_icon"><span><i class="far fa-envelope text-white pe-2"></i></span></p>
-                        <p class="mail_text">info@webmail.com</p>
+                        <p class="mail_text">info@rajasthandryfruitshouse.com
+                        </p>
                     </div>
                     <div class="address_text_content d-flex">
                         <p class="mail_icon"><span><i class="fas fa-map-marker-alt text-white pe-2"></i></span></p>
-                        <p class="address_text">15/A, Nest Tower,NYC</p>
+                        <p class="address_text">nr.Flamingo circle Prahlad Nagar Ahmedabad Gujarat 380015</p>
                     </div>
                 </div>
                 <div class="header_top_socials pt-2">
