design:Images updated

--- a/src/website/templates/website/about.html
+++ b/src/website/templates/website/about.html
@@ -4,7 +4,7 @@
     <section class="vendor_section sec_space_small aos-init aos-animate" data-aos="fade-up" data-aos-duration="2000">
         <div class="container">
             <div class="vendor_image">
-                <img src="{% static 'website/images/backgrounds/banner.webp' %}" style="width: 12000px;"
+                <img src="{% static 'website/images/about-us.jpg' %}" style="width: 12000px;"
                      alt="image_not_found">
             </div>
             <h2 class="title_text">
@@ -239,7 +239,7 @@
         </div>
     </div>
     <section class="work_process_section sec_space_small pb-0"
-             style="background-image: url('{% static 'website/images/backgrounds/bg10.png' %}')">
+             style="background-image: url('{% static 'website/images/about-banner-2.jpg' %}')">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col col-lg-5">
