--- a/src/website/templates/website/home.html
+++ b/src/website/templates/website/home.html
@@ -881,14 +881,14 @@
                 <div class="offer_delivery_wrap sec_space_xs_70 mt-5">
                     <div
                             class="offer_delivery_content inner_p_all_70 d-flex align-items-center justify-content-between"
-                            style="background-image: url({% static 'website/images/offer/offer5.png' %})">
+                            style="background-image: url({% static 'website/images/home-banner-1.jpg' %})">
                         <div class="offer_delivery_title">
-                            <span><font>NATURE'S BEST SELECTION -></font> FRESH FROM RDH</span>
+{#                            <span><font>NATURE'S BEST SELECTION -></font> FRESH FROM RDH</span>#}
                         </div>
 
-                        <div class="offer_delivery_btn">
+                        <div class="offer_delivery_btn ">
                             <a href="{% url 'website:shop' %}" class="custom_btn rounded-pill">
-                                <button type="button" class="btn text-white">Shop Now <span><i
+                                <button type="button" class="btn text-white">  <span><i
                                         class="fas fa-long-arrow-alt-right"></i></span></button>
                             </a>
                         </div>
