--- a/src/website/templates/website/home.html
+++ b/src/website/templates/website/home.html
@@ -878,24 +878,9 @@
                         </div>
                     </div>
                 {% endfor %}
-                <div class="offer_delivery_wrap sec_space_xs_70 mt-5">
-                    <div
-                            class="offer_delivery_content inner_p_all_70 d-flex align-items-center justify-content-between"
-                            style="background-image: url({% static 'website/images/home-banner-1.jpg' %})">
-                        <div class="offer_delivery_title">
-{#                            <span><font>NATURE'S BEST SELECTION -></font> FRESH FROM RDH</span>#}
-                        </div>
-
-                        <div class="offer_delivery_btn ">
-                            <a href="{% url 'website:shop' %}" class="custom_btn rounded-pill">
-                                <button type="button" class="btn text-white">  <span><i
-                                        class="fas fa-long-arrow-alt-right"></i></span></button>
-                            </a>
-                        </div>
-                    </div>
-
+                 <div class="offer_delivery_wrap sec_space_xs_70 mt-5">
+                    <img src="/static/website/images/home-banner-1.jpg" style="width: 12000px;" alt="image_not_found">
                 </div>
-
             </div>
         </div>
     </section>
