--- a/templates/website/include/sidebar.html
+++ b/templates/website/include/sidebar.html
@@ -47,7 +47,7 @@
 {#                                    </li>#}
                                     <li>
                                         <span>Sub Total:</span>
-                                        <span>{{total_amount|floatformat:"2" }}</span>
+                                        <span>{{sub_total|floatformat:"2" }}</span>
                                     </li>
                                 </ul>
                             </div>
