--- a/src/administration/admins/templates/admins/package_list.html
+++ b/src/administration/admins/templates/admins/package_list.html
@@ -23,7 +23,7 @@
                     <table class="table table-hover">
                         <thead class="thead-light">
                         <tr>
-                            <th>Name</th>
+                            <th>Package Weight</th>
                             <th>Length</th>
                             <th>Width</th>
                             <th>Height</th>
