--- a/src/website/templates/website/franchise.html
+++ b/src/website/templates/website/franchise.html
@@ -9,7 +9,34 @@
                     <div class="col-lg-6 ">
                         <h3 class="comment_area_title mt-3 mb-5">Investment Breakdown in Inr</h3>
                         <div class="card">
-                           
+                            <div class="card-body p-4">
+                                <div>
+                                    <p class="float-end"><b>3 Lakh + GST</b></p>
+                                    <p><b>Franchise Free</b></p>
+                                </div>
+                                <hr>
+
+                                <div>
+                                    <p class="float-end"><b>1.5 Lakh</b></p>
+                                    <p><b>Equipment</b></p>
+                                </div>
+                                <hr>
+                                <div>
+                                    <p class="float-end"><b>2 Lakh</b></p>
+                                    <p><b>Interior Cost</b></p>
+                                </div>
+                                <hr>
+                                <div>
+                                    <p class="float-end"><b>50 Thousand</b></p>
+                                    <p><b>Misc</b></p>
+                                </div>
+                                <hr>
+                                <div>
+                                    <p class="float-end"><b>7-8 Approx</b></p>
+                                    <p><b>Total</b></p>
+                                </div>
+                                <hr>
+                            </div>
 
                         </div>
                     </div>
