--- a/src/website/templates/website/franchise.html
+++ b/src/website/templates/website/franchise.html
@@ -11,7 +11,9 @@
                         <div class="card">
                             <div class="card-body p-4">
                                 <div>
+                                    
                                     <p class="float-end"><b>3 Lakh + GST</b></p>
+                                    <p><b>Franchise Free</b></p>
                                     
                                 </div>
                                 <hr>
